fix: set proper class names/ids for 'contrast', 'fill', 'lightness'

--- a/source/sass/blocks/filter-tools.scss
+++ b/source/sass/blocks/filter-tools.scss
@@ -37,7 +37,7 @@ $button-width: 48px;
   width: $button-width;
 }
 
-.filter-tools__color {
+.filter-tools__contrast {
   background-image: url("../img/icon-editor-contrast.svg");
   background-position-x: center;
   background-position-y: center;
